src/test/deca/syntax/invalid/if-withoutBody.synt
if-withoutParenthesis.deca:2: